FTKernelAPI_SDK/VBDemo/FTKernelAPI.bas

Attribute VB_Name = "FTKernelAPI"
'FTKernelAPI.bas is an declaration for VB.
'
' English Notes:
'
' Copyright @ 2004-2006 p2plib.com All rights reserved.
' MSN: FlashBT@Hotmail.com
' Homepage: http:'www.p2plib.com
'
' FTKernelAPI is a kernel API based on Bittorrent protocol.
'
' Please use and enjoy. Please let me know of any bugs'mods'improvements
' that you have found and I will fix them into this library.
'
' Please visit http:'www.p2plib.com for the detailed information.
'
' ***********************************************************************
' Chinese Notes:
'
' 版权所有 2004-2006 北京惠软畅联网络技术有限公司 保留所有权利. 中国.
' 官方网站: http:'www.p2plib.com'
'
' FTKernelAPI 是基于BitTorrent协议的内核库' 并做了强大扩展. 可以帮助您
' 快速的开发自己的P2P软件系统.
'
' FTKernelAPI 兼容BT协议内核库' 分为4个版本:
' 1. 免费版本' 使用受限制' 只支持一个并发任务' 无技术支持
' 2. 初级版本' 需付费' 支持多个任务并发' 有技术支持
' 3. 中级版本' 需付费' 支持自定义协议' 数据加密' 封锁指定IP' 限速等功能' 有技术支持
' 4. 高级版本' 需付费' 支持顺序下载' 流媒体点播' 被动回调加载任务' 有技术支持
'
' 如果发现任何错误'建议' 请通知我们' 我们将在以后的版本中很快改进和实现.
' 更详细信息请访问我的网站: http:'www.p2plib.com
'

'用户标识的长度
'length of client identifier
Const IDSIZE = 20

'BitTorrent 客户端版本信息长度
'bitorrent client version information
Const AGENTSIZE = 64

'生成的SHA的散列的长度
'Length of SHA1
Const SHA1_DIGEST_LENGTH = 20

'代理的类型
'Proxytypes
Const PROXYTYPE_NOPROXY = 0
Const PROXYTYPE_SOCKS4 = 1
Const PROXYTYPE_SOCKS4A = 2
Const PROXYTYPE_SOCKS5 = 3
Const PROXYTYPE_HTTP11 = 4

''''''''''''
'下载状态
'Download status
Public Enum enmFTK_Downloader_State
    DLSTATE_NONE = 0
    DLSTATE_ALLOCING = 1
    DLSTATE_CHECKING = 2
    DLSTATE_DOWNLOAD = 3
    DLSTATE_PAUSING = 4
    DLSTATE_CHECKEND = 5
    DLSTATE_FETALERR = 6
    DLSTATE_TERMINATE = 7
End Enum


'定义Piece的状态
'Piece status
Const PIECESTATE_INCOMPLETE = 0
Const PIECESTATE_DOWNLOADING = 1
Const PIECESTATE_COMPLETE = 2

'Port type of Firewall and UPnP
'操做Windows防火墙或者UPnP时的端口类型定义
Const WCXT_TCP_PORT = 1
Const WCXT_UDP_PORT = 2

'Declaration for compatible VB6.0 only
Type TwoLong
    LowLong As Long
    HighLong As Long
End Type

Type tagPeerData

    m_dwIP As Long
    m_nPort As Integer
    m_pPeerID(IDSIZE) As Byte

    '-------------------------------------

    m_bIsLocal As Byte
    m_szVersion(AGENTSIZE - 1) As Byte
    m_qwPeerHaveSize As TwoLong
    m_fDownRate As Single
    m_fUpRate As Single
    m_qwDownloaded As TwoLong
    m_qwUploaded As TwoLong
    m_fTimeElapsed As Single
    m_fPeerDownRate As Single
    m_szExtInfo(256 - 1) As Byte
    
End Type

Type tagMiniPeerData

    m_dwIP As Long
    m_nPort As Integer

End Type
  
Type tagAnnounceData

    m_szURL(512 - 1) As Byte
    m_bWorking As Byte
    m_bHeader As Byte
    m_nCount As Long
    m_nFailed As Long
    m_fTimeLeft As Single
    m_fLastTime As Single
    m_szExtInfo(512 - 1) As Byte
    
End Type

Type tagFileInfo

    m_szFileName(512 - 1) As Byte
    m_qwFileSize As TwoLong
    
End Type
  
Type tagErrInfo

    m_szErrInfo(1024 - 1) As Byte
    
End Type


''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
    
'定义被动通知的回调函数
'Define callback function type
'Declare Function FTK_CALLBACK_FUNC( ByVal nSocket As Int32, ByRef pData As Byte ) As Boolean


''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
'Library version information

'取当前库的版本信息, 例如: nMajor = 1, nMinor = 1 => ver: 1.1
'Get library major version, example: nMajor = 1, nMinor = 1 => ver: 1.1
Declare Sub FTK_Version_Info Lib "FTKernelAPI" (ByRef nMajor As Long, ByRef nMinor As Long)

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
'Libary License Interface

'Set license key
'设置license的密钥
Declare Sub FTK_License_Set Lib "FTKernelAPI" (ByVal lpszLicense As String)

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
'Define yourself protocol identifier string

'Define yourself protocol identifier string(to avoid Router filter)
'定义你自己的网络协议标识，可以避开某些网络运营商的协议封锁
Declare Sub FTK_Protocol_IDS Lib "FTKernelAPI" (ByVal pIDS As String, ByVal bAllowOtherIDS As Boolean)

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''Define yourself user identifier

''Define yourself user identifier(read by tracker)
''定义自己的用户标识信息(Tracker服务器可以获取到)
Declare Sub FTK_Identifier_String10 Lib "FTKernelAPI" (ByVal pS As String)

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''Define yourself http tracker "UserAgent"

''Define yourself http tracker "UserAgent"
''定义自己的提交给http tracker的http协议中的"UserAgent"
Declare Sub FTK_Http_UserAgent Lib "FTKernelAPI" (ByVal lpszUA As String)
    

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
'Config INI file interface

'创建一个新的配置文件句柄
'Create a new Config INI file handle
Declare Function FTK_Config_Open Lib "FTKernelAPI" () As Long

'销毁一个存在的配置文件句柄
'Destroy a HConfigIni hanle
Declare Sub FTK_Config_Close Lib "FTKernelAPI" (ByVal hConfigIni As Long)

'设置字符串选项
'Set string value item
Declare Sub FTK_Config_SetStr Lib "FTKernelAPI" (ByVal hConfigIni As Long, ByVal lpszName As String, ByVal lpszName As String)

'设置整型值选项
'Set integer value item
Declare Sub FTK_Config_SetInt Lib "FTKernelAPI" (ByVal hConfigIni As Long, ByVal lpszName As String, ByVal nValue As TwoLong)

'设置浮点型选项
'Set float value item
Declare Sub FTK_Config_SetFloat Lib "FTKernelAPI" (ByVal hConfigIni As Long, ByVal lpszName As String, ByVal fValue As Double)

'''''''''''''''''''''''''''''''''''''
'Context interface

'环境初始化
'Initialize context
'@lpszIniFile: kernel configuration file - INI file
Declare Function FTK_Context_Init Lib "FTKernelAPI" (ByVal lpszIniFile As String, ByVal bLog As Boolean) As Long

'环境初始化
'Initialize context
'@lpszIniFile: kernel configuration file - INI file
Declare Function FTK_Context_Init2 Lib "FTKernelAPI" (ByVal hConfigIni As Long, ByVal bLog As Boolean) As Long

'设置被动通知的回调函数
'Set callback funtion pointer
Declare Sub FTK_Context_NotifyCB Lib "FTKernelAPI" (ByVal pfn As Long)

'释放整个环境
'Release context
Declare Sub FTK_Context_Release Lib "FTKernelAPI" ()

'整个环境的事件驱动引擎
'Context event driver
Declare Function FTK_Context_Run Lib "FTKernelAPI" () As Long

'强迫退出环境, 停止运行
'在停止时要退出正在运行的线程所以可能要稍微等待
'Stop context event driver
Declare Sub FTK_Context_Stop Lib "FTKernelAPI" ()

'重新根据配置文件绑定端口
'Rebind listen port
Declare Sub FTK_Context_ReBindListenPort Lib "FTKernelAPI" ()

'判断是否已经初始化
'Is context initialized?
Declare Function FTK_Context_IsInit Lib "FTKernelAPI" () As Long

'是否监听成功了端口
'Is context running?
Declare Function FTK_Context_IsRunning Lib "FTKernelAPI" () As Long

'判断是否已经运行
'Return context thread ID
Declare Function FTK_Context_GetThreadID Lib "FTKernelAPI" () As Long

'获取线程的ID
'Return listening port
Declare Function FTK_Context_GetListenPort Lib "FTKernelAPI" () As Integer

'重新指定端口绑定操作
'Return binding ip address
Declare Function FTK_Context_GetBindIP Lib "FTKernelAPI" () As String

''判断是否绑定端口操作成功
''return bind listen port status
Declare Function FTK_Context_IsBindListenPort Lib "FTKernelAPI" () As Boolean


''设置兼容某些常见的错误torrent格式
''Set to open some mistake mistaken TORRENT file
Declare Sub FTK_Context_TorrentFile Lib "FTKernelAPI" (ByVal bValidEOF As Boolean, ByVal bValidSort As Boolean)

''设置日志的语言文件
''Set language to write log
Declare Sub FTK_Context_OpenLanguageFile Lib "FTKernelAPI" (ByVal lpszLanguageFile As String)

'''''''''''''''''''''''''''''''''''''
'Downloader interface

'Create a new HDownloader handle
Declare Function FTK_Downloader_Open Lib "FTKernelAPI" () As Long

'Destroy a HDownloader hanle
Declare Sub FTK_Downloader_Close Lib "FTKernelAPI" (ByVal HDownloader As Long)

''提前的初始化IP过滤对象的函数(FTK_Downloader_Init* 函数之前调用), 过滤某些段的IP地址, "ipfilter.dat" 文件和eMule(电骡)兼容
''Previous Initialize IP filter object to filter some peer's IP, "ipfilter.dat" file is compatiable with eMule.
Declare Function FTK_Downloader_PreInitIPFilter Lib "FTKernelAPI" (ByVal HDownloader As Long, ByVal lpszIPFilterFile As String, ByVal nLevel As Long) As Boolean


''提前的初始化, 按照块的先后顺序进行下载(适用于边下载边播放的情况)
''Previous Initialize, Tell kernel to sequential download piece
Declare Sub FTK_Downloader_PreInitSEQMode Lib "FTKernelAPI" (ByVal HDownloader As Long)

''预先初始化文件选择下载的优先级别
''数组中，每个元素的值表示: -2:不下载, -1: 低, 0: 一般, 1:高
''Previous Initialize, Tell kernel to Set priority of file
''-2: no download, -1: low, 0: middle, 1: high
Declare Sub FTK_Downloader_PreInitFilePriority Lib "FTKernelAPI" (ByVal HDownloader As Long, ByVal pFilePriority As String, ByVal nFilesCount As Long)

'初始化下载对象
'Initialize a HDownloader
'@lpszTorrentFileName: a torrent file name
'@pPreAllocFile: a array of preallocated files, 0->no, 1->yes
'@nPreAllocFileLen: length of preallocated array
'@bOnlyCheckFile: only verify data of files
'@lpszDestFileName: the downloaded filename
'@lpszConfig: kernel configuration file - INI file
'@lpszLogFileName: output log filename
'@lpszStatusFileName: downloading status filename
'@lpszDesKey: DES-EDE2 password
'@nCodePage: code page of the torrent file
Declare Function FTK_Downloader_Init Lib "FTKernelAPI" (ByVal HDownloader As Long, ByVal lpszTorrentFileName As String, ByRef pPreAllocFile As Byte, ByVal nPreAllocFileLen As Long, ByVal bOnlyCheckFile As Long, ByVal lpszDestFileName As String, ByVal lpszConfig As String, ByVal lpszLogFileName As String, ByVal lpszStatusFileName As String, ByVal bQuicklySeed As Boolean, ByVal lpszDesKey As String, ByVal nCodePage As Long) As Long

'Mod by Leo
'初始化下载对象
'Initialize a HDownloader
'@lpszTorrentFileName: a torrent file name
'@pPreAllocFile: a array of preallocated files, 0->no, 1->yes
'@nPreAllocFileLen: length of preallocated array
'@bOnlyCheckFile: only verify data of files
'@lpszDestFileName: the downloaded filename
'@lpszConfig: kernel configuration file - INI file
'@lpszLogFileName: output log filename
'@lpszStatusFileName: downloading status filename
'@lpszDesKey: DES-EDE2 password
'@nCodePage: code page of the torrent file
Declare Function FTK_Downloader_Init2 Lib "FTKernelAPI" (ByVal HDownloader As Long, ByVal lpszTorrentFileName As String, ByRef pPreAllocFile As Byte, ByVal nPreAllocFileLen As Long, ByVal bOnlyCheckFile As Long, ByVal lpszDestFileName As String, ByVal hConfigIni As Long, ByVal lpszLogFileName As String, ByVal lpszStatusFileName As String, ByVal bQuickySeed As Boolean, ByVal lpszDesKey As String, ByVal nCodePage As Long) As Long

''初始化下载对象3
''Initialize a HDownloader
''@pData: a torrent binary object, a pointer to a binary torrent file content
''@nLength: the length of a torrent binary object
''@pPreAllocFile: a array of preallocated files, 0->no, 1->yes
''@nPreAllocFileLen: length of preallocated array
''@bOnlyCheckFile: only verify data of files
''@lpszDestFileName: the downloaded filename
''@lpszConfig: kernel configuration file - INI file
''@lpszLogFileName: output log filename
''@lpszStatusFileName: downloading status filename
''@lpszDesKey: DES-EDE2 password
''@nCodePage: code page of the torrent file
Declare Function FTK_Downloader_Init3 Lib "FTKernelAPI" (ByVal HDownloader As Long, ByRef pData As Byte, ByVal nLength As Long, ByRef pPreAllocFile As Byte, ByVal nPreAllocFileLen As Long, ByVal bOnlyCheckFile As Long, ByVal lpszDestFileName As String, ByVal lpszConfig As String, ByVal lpszLogFileName As String, ByVal lpszStatusFileName As String, ByVal bQuicklySeed As Boolean, ByVal lpszDesKey As String, ByVal nCodePage As Long) As Long
